--- a/frontend/src/components/Main/styles.module.css
+++ b/frontend/src/components/Main/styles.module.css
@@ -1,10 +1,11 @@
 .navbar {
-	width: 100%;
+	width: auto;
 	height: 70px;
 	background-color: pink;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	padding-left:20%;
 }
 
 .navbar h1 {
@@ -25,24 +26,41 @@
 	cursor: pointer;
 	margin-right: 20px;
 }
+.pink_btn {
+	border: 1px solid black;
+	outline: none;
+	background-color: pink;
+	border-radius: 20px;
+	width: 100%;
+	height: 30px;
+	font-weight: bold;
+	cursor: pointer;
+}
 .tab {
 	display: flex;
 	flex-wrap: wrap;
-	margin-bottom: 10px;
+	margin:0;
 }
 .tab_rec_par {
-	width: 9%;
+	width: 10%;
 }  
 .tab_rec {
 	margin: 0;
-	border-left: 1px solid black;
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
+	text-align: center;
+	height: 25px;
+	border-left: 3px solid black;
+	border-top: 3px solid black;
+	border-bottom: 3px solid black;
 }
 
 .tab_rec:last-child {
-	border-left: 1px solid black;
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
-	border-right: 1px solid black;
+	border-left: 3px solid black;
+	border-top: 3px solid black;
+	border-bottom: 3px solid black;
+	border-right: 3px solid black;
+}
+.tab_menu{
+	display: flex;
+	flex-wrap: wrap;
+	margin:0 38.4%;
 }
