--- a/frontend/src/components/Main/styles.module.css
+++ b/frontend/src/components/Main/styles.module.css
@@ -64,3 +64,17 @@
 	flex-wrap: wrap;
 	margin:0 38.4%;
 }
+.popup{
+	width: 20%;
+	height: 550px;
+	border: 5px solid black;
+	border-radius: 20px;
+	padding: 10px;
+	background-color: white;
+	position: absolute;
+	top: 15%;
+  	left: 34%;
+}
+.form_label{
+	width: 134px;
+}
