--- a/frontend/src/components/Main/styles.module.css
+++ b/frontend/src/components/Main/styles.module.css
@@ -5,7 +5,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding-left:20%;
+	padding-left:3%;
 }
 
 .navbar h1 {
@@ -26,8 +26,11 @@
 	cursor: pointer;
 	margin-right: 20px;
 }
+.white_btn:hover{
+	background-color: rgb(244, 225, 228);
+}
 .pink_btn {
-	border: 1px solid black;
+	border: 2px solid black;
 	outline: none;
 	background-color: pink;
 	border-radius: 20px;
@@ -35,6 +38,9 @@
 	height: 30px;
 	font-weight: bold;
 	cursor: pointer;
+}
+.pink_btn:hover{
+	background-color: rgb(243, 121, 141);
 }
 .tab {
 	display: flex;
@@ -66,15 +72,48 @@
 }
 .popup{
 	width: 20%;
-	height: 550px;
+	height: 600px;
 	border: 5px solid black;
 	border-radius: 20px;
 	padding: 10px;
 	background-color: white;
 	position: absolute;
-	top: 15%;
+	top: 8%;
   	left: 34%;
 }
 .form_label{
 	width: 134px;
+}
+.menu {
+    position: relative;
+    display: inline-block;
+  }
+  
+.menu_content {
+display: none;
+position: absolute;
+min-width: 160px;
+z-index: 1;
+}
+
+.menu:hover .menu_content {
+display: block;
+}
+
+.menu_item {
+    border: none;
+	outline: none;
+	padding: 12px 0;
+	border-radius: 20px;
+    background-color: white;
+	width: 120px;
+	font-weight: bold;
+	font-size: 14px;
+	cursor: pointer;
+	margin-right: 20px;
+    
+}
+.menu_item:hover{
+    background-color: rgb(244, 225, 228);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
